--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./dist/css/main.css">
-  
+
   <title>Frontend Mentor | 3-column preview card component</title>
 
 </head>
+
 <body>
 
   <main class="container">
@@ -17,29 +18,39 @@
     <div class="card card__sedans">
       <img src="./images/icon-sedans.svg" alt="sedan">
       <h2>Sedans</h2>
-      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
-      <a class="btn" href="#">Learn More</a>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next
+        road trip.</p>
+      <div class="flex">
+        <a class="btn btn__sedans" href="#">Learn More</a>
+      </div>
     </div>
 
     <div class="card card__suvs">
       <img src="./images/icon-suvs.svg" alt="suvs">
       <h2>SUVs</h2>
-      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
-      <a class="btn" href="#">Learn More</a>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
+        off-road adventures.</p>
+      <div class="flex">
+        <a class="btn btn__suvs" href="#">Learn More</a>
+      </div>
     </div>
 
     <div class="card card__luxury">
       <img src="./images/icon-luxury.svg" alt="luxury">
       <h2>Luxury</h2>
-      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
-      <a class="btn" href="#">Learn More</a>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
+        arrive in style.</p>
+      <div class="flex">
+        <a class="btn btn__luxury" href="#">Learn More</a>
+      </div>
     </div>
-    
+
   </main>
-  
+
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Gareth Fong</a>.
   </footer>
 </body>
+
 </html>
